Ingress/prometheus/prometheus.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: $APP_INSTANCE_NAME-prometheus
  labels: &Labels
    k8s-app: prometheus
    app.kubernetes.io/name: $APP_INSTANCE_NAME
    app.kubernetes.io/component: prometheus
spec:
  serviceName: "$APP_INSTANCE_NAME-prometheus"
  replicas: $PROMETHEUS_REPLICAS
  podManagementPolicy: "Parallel"
  updateStrategy:
    type: "RollingUpdate"
  selector:
    matchLabels: *Labels
  template:
    metadata:
      labels: *Labels
    spec:
      serviceAccountName: $PROMETHEUS_SERVICE_ACCOUNT
      containers:
        - name: prometheus-server
          image: $IMAGE_PROMETHEUS
          imagePullPolicy: "IfNotPresent"
          args:
            - --config.file=/etc/config/prometheus.yaml
            - --storage.tsdb.path=/data
            - --web.console.libraries=/etc/prometheus/console_libraries
            - --web.console.templates=/etc/prometheus/consoles
            - --web.enable-lifecycle
          ports:
            - containerPort: 9090
          readinessProbe:
            httpGet:
              path: /-/ready
              port: 9090
            initialDelaySeconds: 30
            timeoutSeconds: 30
          livenessProbe:
            httpGet:
              path: /-/healthy
              port: 9090
            initialDelaySeconds: 30
            timeoutSeconds: 30
          # based on 10 running nodes with 30 pods each
          resources:
            requests:
              cpu: 200m
              memory: 1000Mi
          volumeMounts:
            - name: config-volume
              mountPath: /etc/config
            - name: $APP_INSTANCE_NAME-prometheus-data
              mountPath: /data
              subPath: ""
      terminationGracePeriodSeconds: 300
      volumes:
        - name: config-volume
          configMap:
            name: $APP_INSTANCE_NAME-prometheus-config
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: k8s-app
                operator: In
                values:
                - prometheus
            topologyKey: "kubernetes.io/hostname"
  volumeClaimTemplates:
  - metadata:
      name: $APP_INSTANCE_NAME-prometheus-data
      labels: *Labels
    spec:
      storageClassName: $STORAGE_CLASS
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: "3Gi"
