Ingress/prometheus/prometheus-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
  name: prometheus
  #namespace: grafana-1
spec:
  rules:
  - host: prometheus.adapt.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prom-server
            port:
              number: 9090
